# szkarc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deldirs.cpp  main.cpp  szkarc.cpp  szkarc.h  unzipdirs.cpp
.github/workflows/: build-windows.yml  build.yml
script/: build.bat  build.sh  build_deps.bat  build_deps.sh
tests/input/日本語フォルダ/サブ/: jpn.txt
